[gd_scene load_steps=2 format=3 uid="uid://h8q7v4j6y5n3q"]

[ext_resource type="Script" path="res://scripts/ui/quest_log.gd" id="1_2k4m3"]

[node name="QuestLog" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2k4m3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quest Log"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuestList" type="ItemList" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
focus_mode = 2

[node name="QuestDetails" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="QuestTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/QuestDetails"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quest Title"

[node name="QuestDescription" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer/QuestDetails"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Quest description goes here..."
autowrap_mode = 2

[node name="Objectives" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/QuestDetails"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ObjectivesTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/QuestDetails/Objectives"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Objectives"

[node name="ObjectivesList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/QuestDetails/Objectives"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Rewards" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/QuestDetails"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="RewardsTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/QuestDetails/Rewards"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Rewards"

[node name="RewardsList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/QuestDetails/Rewards"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close" 